Navbar overflow fix; admin preloads all modules for speed; fixes to some broken font awesome icons

--- a/src/TRAISI/ClientApp/src/admin-app/app/layout/navbar/navbar.component.scss
+++ b/src/TRAISI/ClientApp/src/admin-app/app/layout/navbar/navbar.component.scss
@@ -21,26 +21,28 @@ app-navbar {
 }
 
 .top-nav {
-
+	height: 63px;
+	overflow: hidden;
 	list-style: none;
 	.traisi-logo {
 		a {
 			padding-left:25px !important;
-			padding-top: 15px;
+			padding-top: 8px;
+			padding-bottom: 10px;
 			overflow: hidden;
 		}
 	}
 	left: 0px;
 	li {
 		float: left;
-		margin-top: 5px;
 		a {
 			padding-right:30px;
-			padding-top: 14px;
+			padding-top: 6px;
+			padding-bottom: 10px;
 			white-space: nowrap;
 			overflow:hidden;
 			.icon {
-				margin-top: 12px;
+				margin-top: 6px;
 				.svg-inline--fa {
 					vertical-align: -0.35em;
 				}
