--- a/src/TRAISI/ClientApp/src/shared/assets/scss/_base.scss
+++ b/src/TRAISI/ClientApp/src/shared/assets/scss/_base.scss
@@ -75,10 +75,6 @@ app, .app {
   }
 }
 
-.page-controls.navbar {
-	overflow: hidden;
-}
-
 .page-controls {
   position: fixed;
   z-index: 50;
